--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+/*
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+*/
 /* Universal Selector*/
 * {
 	margin:0px;
@@ -6,15 +10,20 @@
 
 body{
 	background-color: #bbbbbb;
+	background-image:url('../images/bg.png');
+	background-repeat: no-repeat;
+	background-position: top right;
+	background-attachment: fixed;
 }
 /* Grouping Selector */
 h1, h2, h3, h4, h5, h6{
+	font-family:'Titillium Web';
 	font-variant: small-caps; font-weight: bolder;
 	color:#ffec43;
 }
 /* TYPE Selector */
 h1 { font-size:25px;  border-bottom:2px solid #ddccdd;}
-h2{font-size:20px;}
+h2{font-size:20px; font-family:'Lobster';}
 h3{font-size:16px;}
 h4{font-size:12px;}
 h5{font-size:10px;}
@@ -30,7 +39,8 @@ h2  {font-size:15px; color:rgba(250,0,0, 0.7) !important;}
 #container{
 	width:1140px;
 	min-height:800px;
-	border:2px solid #eeeeee;
+	border-left:2px dotted #ff0000;
+	border-right:2px dashed #ff0000;
 	margin:auto auto;
 }
 .bbottomp{
@@ -46,3 +56,10 @@ h2  {font-size:15px; color:rgba(250,0,0, 0.7) !important;}
 
 /* Child SElector */
 #footer > h1{font-size:30px; color:green; }
+
+.box{
+	width:250px;
+	height:250px;
+	border:4px solid #ffec43;
+	border-radius:0px 30px 0px 0px;
+}
